fix: add missing semicolons according to rule 3.7 in html-and-css.md that make overline visible

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ input,button{
 .name, .new-name {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .row {
@@ -142,7 +142,7 @@ input,button{
 }
 
 .task > .new-name {
-  width: 226px
+  width: 226px;
 }
 
 .delete-icon {
@@ -158,19 +158,19 @@ input,button{
 /* Completed */
 
 .completed .name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 
 .task .new-name {
-  display: none
+  display: none;
 }
 
 .edit-mode .new-name {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .name {
